--- a/pom.xml
+++ b/pom.xml
@@ -66,4 +66,14 @@
     <junit.version>4.11</junit.version>
     <log4j.version>1.2.17</log4j.version>
   </properties>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
